# video-editor

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_analysis_tts_download_tables.py
backend/app/: main.py
backend/app/api/v1/: ai_video.py  analysis.py  assets.py  auth.py  auto_edit.py  collaboration.py  downloads.py  effects.py  external.py  music.py  processing.py  projects.py  router.py  script_director.py  smart_edit.py  (+5 more)
backend/app/core/: config.py  database.py  redis.py  security.py  storage.py  subtitle_preset.py
backend/app/models/: __init__.py  analysis.py  asset.py  collaborator.py  download.py  effect.py  music.py  processing.py  project.py  sticker.py  subtitle.py  tts.py  user.py  user_template.py  voice_profile.py
backend/app/schemas/: __init__.py  analysis.py  asset.py  auto_edit.py  collaboration.py  downloads.py  effect.py  music.py  processing.py  project.py  smart_edit.py  sticker.py  subtitle.py  tts.py  user.py  user_template.py
backend/app/services/: ai.py  analyzer.py  auto_edit.py  caption_accessibility.py  claude.py  downloader.py  ffmpeg.py  fish_audio.py  free_en_export.py  heygen_export.py  piapi.py  script_director.py  smart_edit.py  tts.py  whisper_local.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: add_collaboration.py
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_ffmpeg_service.py  test_health.py  test_projects.py
(+167 files in other folders)
